--- a/app/src/main/res/layout/activity_list_user.xml
+++ b/app/src/main/res/layout/activity_list_user.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ListUserActivity">
+    tools:context=".listuser.ListUserActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/rv_user_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/row_item_list_user"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
