--- a/app/src/main/res/layout/row_item_repo.xml
+++ b/app/src/main/res/layout/row_item_repo.xml
@@ -1,53 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rv_repo"
+    android:padding="18dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/ig"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="wrap_content">
 
 <!--    <TextView-->
-<!--        android:id="@+id/tv_username"-->
+<!--        android:id="@+id/tv_name_repo"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:text="Username"-->
-<!--        android:textSize="20dp"-->
-<!--        android:textStyle="normal"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        tools:ignore="MissingConstraints" />-->
-<!--    -->
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/tv_nama_lengkap"-->
-<!--        android:text="Nama Lengkap"-->
+<!--        android:layout_marginTop="25dp"-->
+<!--        android:text="Name Repositori"-->
 <!--        android:textSize="24sp"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/tv_username"-->
+<!--        android:textStyle="bold"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:textStyle="bold"/>-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:layout_width="match_parent"-->
+<!--    <TextView-->
+<!--        android:id="@+id/tv_fullname_repo"-->
+<!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/tv_nama_lengkap"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        android:id="@+id/desc">-->
-<!--        -->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="100dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        android:text="Fullname Repositori"-->
+<!--        android:textSize="24sp"-->
+<!--        android:textColor="@color/black"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tv_name_repo" />-->
 
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_nama_repo"
+        android:text="Genta Halilintar"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_fullname_repo"
+        app:layout_constraintTop_toBottomOf="@+id/tv_nama_repo"
+        android:text="FullName"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_desc"
+        android:text="A collection of samples to discuss and showcase different architectural tools and patterns for Android apps."
+        app:layout_constraintTop_toBottomOf="@+id/tv_fullname_repo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
