--- a/app/src/main/res/layout/activity_json.xml
+++ b/app/src/main/res/layout/activity_json.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JsonActivity">
+    tools:context=".hero.JsonActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_hero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/row_item_hero"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
