--- a/app/src/main/res/layout/activity_json.xml
+++ b/app/src/main/res/layout/activity_json.xml
@@ -6,12 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".hero.JsonActivity">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/sv_hero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="Cari Disini" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_hero"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/row_item_hero"
         android:padding="10dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/sv_hero" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
